fixed overflowing about me section with hard-coded vh value

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,7 +83,7 @@ body {
 }
 
 .section-img {
-  width: 100%;
+  height: 55vh;
   margin-bottom: 20px;
 }
 
